--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,8 @@ events {}
 
 http {
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name $DOMAIN;
         root /var/www/html;
 
